test/functional/failtests/lambdas/decl.mismatchedInferredBase.txt
TypeError: Could not use lambda func where function is not expcted
1 | func main() {
2 |     int:x = (): 123;
  |             ^ (2:13)
3 | }

